Bug fixes
- Fixed a font bug that was negatively impacting some content
- Fixed a bug on the search page that caused it to break on smaller displays

--- a/src/Components/Homepage/NewsCards/NewsCard/style.css
+++ b/src/Components/Homepage/NewsCards/NewsCard/style.css
@@ -4,7 +4,7 @@
 	background-color: #fff;
 	border-radius: 15px;
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: column;
 	transition: 0.5s all;
 }
 
