--- a/src/style.css
+++ b/src/style.css
@@ -17,18 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-}
-
-p {
-  font-family: "Open Sans";
-}
-
-h1 {
-  font-family: "Open Sans";
-}
-
-h2 {
-	font-family: "Open Sans";
+	font-family: "Open Sans", "Arial", sans-serif;
 }
 
 #body {
